Frontend view2 updated Pair (Morten & Nikolai)

--- a/SIPElectiveStudyGrpA/src/main/webapp/view1/view1.html
+++ b/SIPElectiveStudyGrpA/src/main/webapp/view1/view1.html
@@ -35,7 +35,7 @@
     </div>
 
     <div class="row">
-        <div class="PULL-RIGHT">
+        <div class="pull-left">
             <button name="Compile" class="btn btn-success">Compile</button>
         </div>
     </div>
