--- a/SIPElectiveStudyGrpA/src/main/webapp/view1/view1.html
+++ b/SIPElectiveStudyGrpA/src/main/webapp/view1/view1.html
@@ -4,7 +4,7 @@
 
     <div class="row">
 
-        <div class="border col-sm-3">
+        <div class="border col-sm-3 well">
             <a href="">test</a>
         </div>
 
