--- a/SIPElectiveStudyGrpA/src/main/webapp/index.html
+++ b/SIPElectiveStudyGrpA/src/main/webapp/index.html
@@ -11,6 +11,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="lib/bootstrap.css"/>
   <link rel="stylesheet" href="app.css">
+  <link rel="stylesheet" href="view2/view2.css">
 </head>
 <body>
   <ul class="menu">
@@ -29,5 +30,6 @@
   <script src="app.js"></script>
   <script src="view1/view1.js"></script>
   <script src="view2/view2.js"></script>
+  <script src="lib/angular-drag-and-drop-lists.js"></script>
 </body>
 </html>
