--- a/SIPElectiveStudyGrpA/src/main/webapp/view2/view2.html
+++ b/SIPElectiveStudyGrpA/src/main/webapp/view2/view2.html
@@ -1,10 +1,7 @@
 <div class="container" id="wrapper" ng-controller="View2Ctrl">
 
-    <h2>Subject Elective</h2>
+    <h3>Subject Elective</h3>
     <hr/>
-    <a href="" ng-click="test()">Console log output!</a>
-
-
     <div class="col-md-12">
         <div class="row">
             <div ng-repeat="(listName, list) in models.lists" class="col-md-4">
@@ -25,8 +22,8 @@
                                 dnd-effect-allowed="move"
                                 dnd-selected="models.selected = item"
                                 ng-class="{'selected': models.selected === item}"
-                                    >
-                                {{item.label}}
+                                >
+                                <p>{{item.label}}<span class="badge pull-right">{{'aa' | uppercase}}</span></p>
                             </li>
                         </ul>
                     </div>
@@ -45,21 +42,21 @@
 
         <div class="col-md-2 col-md-offset-5 well text-center">
             <h3><strong>Score: <p style="color: green">50</p></strong></h3>
-            <!-- /.panel ->
-        </div>
+    <!-- /.panel ->
+</div>
 
-    </div-->
+</div-->
 
 
     <div class="alert alert-danger" ng-show="false">
         <strong>Fejl!</strong> {{subjetsError}}
     </div>
 
-    <div class="row">
-        <div class="pull-right">
-            <button name="Compile" class="btn btn-success">Compile</button>
-        </div>
-    </div>
+    <!--<div class="row">-->
+        <!--<div class="pull-right">-->
+            <!--<button name="Compile" class="btn btn-success" ng-click="calculate()">Compile</button>-->
+        <!--</div>-->
+    <!--</div>-->
 
     <div id="page-wrapper">
         <div class="row">
@@ -73,32 +70,56 @@
             <div class="col-lg-12">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <strong>Total score here??</strong>
+                        <!--<table class="table table-hover">-->
+                            <!--<tr>-->
+                                <!--<td>-->
+                                    <!--A: {{aCounter}}-->
+                                <!--</td>-->
+                                <!--<td>-->
+                                    <!--B: {{bCounter}} -->
+                                <!--</td>-->
+                                <!--<td>-->
+                                    <!--C: {{cCounter}}-->
+                                <!--</td>-->
+                                <!--<td>-->
+                                    <!--D: {{dCounter}}-->
+                                <!--</td>-->
+                            <!--</tr>-->
+                        <!--</table>-->
+                        <!--<strong>A: {{aCounter}} <&#9>       B: {{bCounter}}     C: {{cCounter}}     D: {{dCounter}}</strong>-->
                     </div>
                     <!-- /.panel-heading -->
                     <div class="panel-body">
                         <div class="dataTable_wrapper">
                             <table class="table table-striped table-bordered table-hover" id="dataTables-example">
                                 <thead>
-                                <tr>
-                                    <th>Student name</th>
-                                    <th>data</th>
-                                    <th>data</th>
-                                    <th>data</th>
-                                    <th>data</th>
-                                </tr>
+                                    <tr>
+                                        <th>Name</th>
+                                        <th><a href="" ng-click="sortType = 'category'; sortReverse = !sortReverse">Category</a></th>
+                                        <th>1 pick</th>
+                                        <th>1 pick</th>
+                                        <th>2 pick</th>
+                                        <th>2 pick</th>
+                                    </tr>
                                 </thead>
                                 <tbody>
-
+                                    <tr ng-repeat="student in calculateData | orderBy:sortType:sortReverse">
+                                        <th>{{student.name}}</th>
+                                        <th>{{student.category}}</th>
+                                        <th>{{student.vote.firstPrio[0].topic}}</th>
+                                        <th>{{student.vote.firstPrio[1].topic}}</th>
+                                        <th>{{student.vote.secondPrio[0].topic}}</th>
+                                        <th>{{student.vote.secondPrio[1].topic}}</th>
+                                    </tr>
                                 </tbody>
                             </table>
                         </div>
                         <!-- /.table-responsive -->
                         <div class="well">
-                            <h4>DataTables Usage Information</h4>
+                            <!--<h4>DataTables Usage Information</h4>-->
 
-                            <p>Some text here...
-                            </p>
+                            <!--<p>Some text here...-->
+                            <!--</p>-->
                             <a class="btn btn-default btn-lg btn-block" target="_blank" href="">Generate list</a>
                         </div>
                     </div>
