facade to csv 2

--- a/SIPElectiveStudyGrpA/src/main/webapp/view1/view1.html
+++ b/SIPElectiveStudyGrpA/src/main/webapp/view1/view1.html
@@ -102,7 +102,7 @@
         </div>
         <div class="alert alert-success" ng-class="{fade:doFade}" role="alert" ng-show="showSuccess">Vote was send!
         </div>
-        <div class="alert alert-danger" ng-class="{fade:doFade}" role="alert" ng-show="showError">{{errorMsg}}</div>
+        <div class="alert alert-success" ng-class="{fade:doFade}" role="alert" ng-show="showError">{{errorMsg}}</div>
 
     </div>
 
